# ns-song-fiscal-panel

./: .gitignore  AGENT.md  README.md  pyproject.toml
data/01_raw/: extracts_seed.csv
metadata/: rules_songshi_juan186.yml  schema.md  sources.yml  taxonomy.yml  unit_map.yml
src/: ingest_songshi_juan186.py  pipeline_end_to_end.py  songshi_juan186_workflow.py
src/extract/: songshi_candidates.py
src/ingest/: wikisource_fetch.py
src/organize/: auto_facts_songshi_juan186.py
src/review/: make_review_sheet.py  promote_reviewed_to_facts.py
tests/: test_pipeline_end_to_end.py  test_songshi_ingest_and_extract.py
tests/fixtures/: juan186_sample.html  juan186_sample.txt
